# to_serde

./: Cargo.toml  README.md  index.html  input.xml  package.json  to_serde.d.ts  to_serde.js  to_serde_bg.wasm  to_serde_bg.wasm.d.ts
examples/: index.html  server.rs
src/: README  lib.rs  main.rs  to_serde.rs
