[package]
name = "to_serde"
version = "0.1.0"
edition = "2021"

[lib]
name = "to_serde"
crate-type = ["cdylib"]
path = "src/lib.rs"


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde-xml-rs = "0.6"
wasm-bindgen = "0.2"
xml-rs = "*"
chrono = "0.4"
url = "2.2"
Inflector = "*"


[[example]]
name = "server"
path = "examples/server.rs"

[dev-dependencies]
xml-rs = "*"
axum = "0.5.0"
tokio = { version = "1.0", features = ["full"] }
tower-http = { version = "0.3.0", features = ["fs"] }